# plugin-template-python

./: Makefile  README.md  buf.gen.yaml  gatewayd_plugin.yaml  gatewayd_plugins.yaml  main.py  mapping.py  module.py  pyproject.toml  stdio_service.py
plugin/v1/: grpc_stdio.proto  grpc_stdio_grpc.py  grpc_stdio_pb2.py  plugin.proto  plugin_grpc.py  plugin_pb2.py
